--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
         Sabrina Ahmed's Website
     </title>
     <body>
-        <div class="topnav">
-            <a class="active" href="#home">Home</a>
+        <div id="myTopnav" class="topNav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a class="active" href="index.html">Home</a>
             <a href="aboutMe.html">About Me</a>
             <a href="profImg.html">Professional Image</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="service.html">Service</a>
         </div>
-        <h1>Sabrina Ahmed's Website</h1>
+        <span onclick="openNav()">open</span>
+        <div id="main">
+            <h1>Sabrina Ahmed's Website</h1>
+        </div>
     </body>
 </HTML>
