--- a/profImg.html
+++ b/profImg.html
@@ -5,7 +5,8 @@
     </head>
     <title>Sabrina's Professional Image</title>
     <body>
-        <div class="topnav">
+        <div id="mySidenav" class="sideNav">
+            <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
             <a href="index.html">Home</a>
             <a href="aboutMe.html">About Me</a>
             <a class="active" href="profImg.html">Professional Image</a>
