--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,8 @@
     </head>
     <title>Sabrina's Portfolio</title>
     <body>
-        <div class="topnav">
+        <div id="mySidenav" class="sideNav">
+            <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
             <a href="index.html">Home</a>
             <a href="aboutMe.html">About Me</a>
             <a href="profImg.html">Professional Image</a>
@@ -13,5 +14,6 @@
             <a href="service.html">Service</a>
         </div>
         <h1>Sabrina's Portfolio</h1>
+        <iframe src="AhmedSabrinaResumeUpdated.pdf" width="100%" height="600px">Resume</a>
     </body>
 </html>
