--- a/service.html
+++ b/service.html
@@ -5,7 +5,8 @@
     </head>
     <title>Sabrina's Service</title>
     <body>
-        <div class="topnav">
+        <div id="mySidenav" class="sideNav">
+            <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
             <a href="index.html">Home</a>
             <a href="aboutMe.html">About Me</a>
             <a href="profImg.html">Professional Image</a>
@@ -13,5 +14,6 @@
             <a class="active" href="service.html">Service</a>
         </div>
         <h1>Sabrina's Service</h1>
+        <img src="serviceimg.JPG" alt="Donuts for Refugees">
     </body>
 </html>
