back to Top Nav

--- a/service.html
+++ b/service.html
@@ -5,8 +5,7 @@
     </head>
     <title>Sabrina's Service</title>
     <body>
-        <div id="mySidenav" class="sideNav">
-            <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
+        <div id="myTopNav" class="topNav">
             <a href="index.html">Home</a>
             <a href="aboutMe.html">About Me</a>
             <a href="profImg.html">Professional Image</a>
@@ -14,6 +13,6 @@
             <a class="active" href="service.html">Service</a>
         </div>
         <h1>Sabrina's Service</h1>
-        <img src="serviceimg.JPG" alt="Donuts for Refugees">
+        <img src="images/serviceimg.JPG" alt="Donuts for Refugees">
     </body>
 </html>
