--- a/aboutMe.html
+++ b/aboutMe.html
@@ -5,7 +5,7 @@
     </head>
     <title>Sabrina's About Me</title>
     <body>
-        <div id="mySidenav" class="sideNav">
+        <div id="myTopNav" class="topNav">
             <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
             <a href="index.html">Home</a>
             <a class="active" href="aboutMe.html">About Me</a>
@@ -14,6 +14,6 @@
             <a href="service.html">Service</a>
         </div>
         <h1>Sabrina's About Me</h1>
-        <img src="personal.jpg" alt="Picture of me">
+        <img src="images/personal.jpg" alt="Picture of me">
     </body>
 </html>
