--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,7 @@
     </head>
     <title>Sabrina's Portfolio</title>
     <body>
-        <div id="mySidenav" class="sideNav">
-            <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
+        <div id="myTopNav" class="topNav">
             <a href="index.html">Home</a>
             <a href="aboutMe.html">About Me</a>
             <a href="profImg.html">Professional Image</a>
