--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="service.html">Service</a>
         </div>
         <div id="main">
+            <img src="images/logo.png" alt="Personal Logo">
             <h1>Sabrina Ahmed's Website</h1>
         </div>
     </body>
