--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,11 +2,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <title>
+            Sabrina Ahmed's About Me
+        </title>
+        <link rel="icon" href="images/logo.png" type="image/x-icon">
     </head>
-    <title>Sabrina's About Me</title>
     <body>
         <div id="myTopNav" class="topNav">
-            <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a> -->
+            <img src="images/logo.png" alt="logo" width="75px">
             <a href="index.html">Home</a>
             <a class="active" href="aboutMe.html">About Me</a>
             <a href="profImg.html">Professional Image</a>
@@ -14,6 +17,6 @@
             <a href="service.html">Service</a>
         </div>
         <h1>Sabrina's About Me</h1>
-        <img src="images/personal.jpg" alt="Picture of me">
+        <img src="images/personal.jpg" alt="Picture of me" width="250px" class="center">
     </body>
 </html>
