--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <HTML>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <title>
+            Sabrina Ahmed's Website
+        </title>
+        <link rel="icon" href="images/logo.png" type="image/x-icon">
     </head>
-    <title>
-        Sabrina Ahmed's Website
-    </title>
     <body>
         <div id="myTopnav" class="topNav">
+            <img src="images/logo.png" alt="logo" width="75px">
             <a class="active" href="index.html">Home</a>
             <a href="aboutMe.html">About Me</a>
             <a href="profImg.html">Professional Image</a>
@@ -15,8 +17,9 @@
             <a href="service.html">Service</a>
         </div>
         <div id="main">
-            <img src="images/logo.png" alt="Personal Logo">
-            <h1>Sabrina Ahmed's Website</h1>
+            <hr>
+            <br>
+            <h1>Sabrina Ahmed</h1><img src="images/logo.png" alt="Personal Logo" width= "200px" class="center">
         </div>
     </body>
 </HTML>
