--- a/portfolio.html
+++ b/portfolio.html
@@ -2,10 +2,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <title>
+            Sabrina Ahmed's Portfolio
+        </title>
+        <link rel="icon" href="images/logo.png" type="image/x-icon">
     </head>
-    <title>Sabrina's Portfolio</title>
     <body>
         <div id="myTopNav" class="topNav">
+            <img src="images/logo.png" alt="logo" width="75px">
             <a href="index.html">Home</a>
             <a href="aboutMe.html">About Me</a>
             <a href="profImg.html">Professional Image</a>
@@ -13,6 +17,6 @@
             <a href="service.html">Service</a>
         </div>
         <h1>Sabrina's Portfolio</h1>
-        <iframe src="AhmedSabrinaResumeUpdated.pdf" width="100%" height="600px">Resume</a>
+        <iframe src="AhmedSabrinaResumeUpdated.pdf" class="center">Resume</a>
     </body>
 </html>
