--- a/service.html
+++ b/service.html
@@ -2,10 +2,14 @@
 <html> 
     <head>
         <link rel="stylesheet" href="styles.css">
+        <title>
+            Sabrina Ahmed's Service
+        </title>
+        <link rel="icon" href="images/logo.png" type="image/x-icon">
     </head>
-    <title>Sabrina's Service</title>
     <body>
         <div id="myTopNav" class="topNav">
+            <img src="images/logo.png" alt="logo" width="75px">
             <a href="index.html">Home</a>
             <a href="aboutMe.html">About Me</a>
             <a href="profImg.html">Professional Image</a>
@@ -13,6 +17,6 @@
             <a class="active" href="service.html">Service</a>
         </div>
         <h1>Sabrina's Service</h1>
-        <img src="images/serviceimg.JPG" alt="Donuts for Refugees">
+        <img src="images/serviceimg.JPG" alt="Donuts for Refugees" width="250px" class="center">
     </body>
 </html>
