--- a/profImg.html
+++ b/profImg.html
@@ -2,10 +2,14 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <title>
+            Sabrina Ahmed's Professional Image
+        </title>
+        <link rel="icon" href="images/logo.png" type="image/x-icon">
     </head>
-    <title>Sabrina's Professional Image</title>
     <body>
         <div id="myTopNav" class="topNav">
+            <img src="images/logo.png" alt="logo" width="75px">
             <a href="index.html">Home</a>
             <a href="aboutMe.html">About Me</a>
             <a class="active" href="profImg.html">Professional Image</a>
