changing the files to meet basic requirements

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!--Landing Page-->
+
+<!--
+    Gives a positive first impression for a prospective employer or client
+    Engages the audience to want to explore more, including interesting information that a prospective employer or organization would want to know
+    Demonstrates your unique personality
+    Shows how you would fit on someone's team and in their corporate culture
+    Clear and concise, only including information that belongs here
+-->
 <!DOCTYPE html>
 <HTML>
     <head>
@@ -11,15 +20,14 @@
         <div id="myTopnav" class="topNav">
             <img src="images/logo.png" alt="logo" width="75px">
             <a class="active" href="index.html">Home</a>
-            <a href="aboutMe.html">About Me</a>
-            <a href="profImg.html">Professional Image</a>
             <a href="portfolio.html">Portfolio</a>
+            <a href="qualifications.html">Qualifications</a>
             <a href="service.html">Service</a>
         </div>
         <div id="main">
             <hr>
             <br>
-            <h1>Sabrina Ahmed</h1><img src="images/logo.png" alt="Personal Logo" width= "200px" class="center">
-        </div>
+            <h1>Sabrina Ahmed</h1><!--<img src="images/logo.png" alt="Personal Logo" width= "200px" class="center">
+            --></div>
     </body>
 </HTML>
