--- a/portfolio.html
+++ b/portfolio.html
@@ -11,12 +11,10 @@
         <div id="myTopNav" class="topNav">
             <img src="images/logo.png" alt="logo" width="75px">
             <a href="index.html">Home</a>
-            <a href="aboutMe.html">About Me</a>
-            <a href="profImg.html">Professional Image</a>
             <a class="active" href="portfolio.html">Portfolio</a>
+            <a href="qualifications.html">Qualifications</a>
             <a href="service.html">Service</a>
         </div>
         <h1>Sabrina's Portfolio</h1>
-        <iframe src="AhmedSabrinaResumeUpdated.pdf" class="center">Resume</a>
     </body>
 </html>
