--- a/secret.html
+++ b/secret.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="styles.css">
         <title>
-            Sabrina Ahmed's Professional Image
+            Sabrina Ahmed's About Me
         </title>
         <link rel="icon" href="images/logo.png" type="image/x-icon">
     </head>
@@ -11,11 +11,11 @@
         <div id="myTopNav" class="topNav">
             <img src="images/logo.png" alt="logo" width="75px">
             <a href="index.html">Home</a>
-            <a href="aboutMe.html">About Me</a>
-            <a class="active" href="profImg.html">Professional Image</a>
             <a href="portfolio.html">Portfolio</a>
+            <a href="qualifications.html">Qualifications</a>
             <a href="service.html">Service</a>
         </div>
-        <h1>Sabrina's Professional Image</h1>
+        <h1>Sabrina's Secret Page</h1>
+        <img src="images/personal.jpg" alt="Picture of me" width="250px" class="center">
     </body>
 </html>
