--- a/service.html
+++ b/service.html
@@ -11,9 +11,8 @@
         <div id="myTopNav" class="topNav">
             <img src="images/logo.png" alt="logo" width="75px">
             <a href="index.html">Home</a>
-            <a href="aboutMe.html">About Me</a>
-            <a href="profImg.html">Professional Image</a>
             <a href="portfolio.html">Portfolio</a>
+            <a href="qualifications.html">Qualifications</a>
             <a class="active" href="service.html">Service</a>
         </div>
         <h1>Sabrina's Service</h1>
