all changes made during lab, portfolio doesnt work

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
             <a href="portfolio.html">Portfolio</a>
             <a href="qualifications.html">Qualifications</a>
             <a href="service.html">Service</a>
+            <!--Add toggle feature that changes the appearance of the page (dark mode, font size, color scheme)-->
         </div>
         <div id="main">
             <hr>
             <br>
-            <h1>Sabrina Ahmed</h1><!--<img src="images/logo.png" alt="Personal Logo" width= "200px" class="center">
-            --></div>
+            <h1>Sabrina Ahmed</h1></div>
     </body>
 </HTML>
