--- a/qualifications.html
+++ b/qualifications.html
@@ -21,6 +21,7 @@
             <a href="portfolio.html">Portfolio</a>
             <a class="active" href="qualifications.html">Qualifications</a>
             <a href="service.html">Service</a>
+            <!--Add toggle feature that changes the appearance of the page (dark mode, font size, color scheme)-->
         </div>
         <h1>Sabrina's Qualifications</h1>
         <iframe src="AhmedSabrinaResumeUpdated.pdf" class="center">Resume</a>
