--- a/service.html
+++ b/service.html
@@ -1,3 +1,10 @@
+<!--Service Page-->
+<!--
+    Describes ways you give back to your community, either through volunteering, mentoring, or other
+    similar activities (may include areas you would like to contribute to if not already)
+
+    Add donuts and girls who code
+-->
 <!DOCTYPE html>
 <html> 
     <head>
@@ -12,8 +19,10 @@
             <img src="images/logo.png" alt="logo" width="75px">
             <a href="index.html">Home</a>
             <a href="portfolio.html">Portfolio</a>
-            <a href="qualifications.html">Qualifications</a>
+            <a href="qualifications.html">Qualifications
+            </a>
             <a class="active" href="service.html">Service</a>
+            <!--Add toggle feature that changes the appearance of the page (dark mode, font size, color scheme)-->
         </div>
         <h1>Sabrina's Service</h1>
         <img src="images/serviceimg.JPG" alt="Donuts for Refugees" width="250px" class="center">
