--- a/secret.html
+++ b/secret.html
@@ -1,3 +1,5 @@
+<!--Secret Page-->
+<!--Don't link anywhere-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -14,6 +16,7 @@
             <a href="portfolio.html">Portfolio</a>
             <a href="qualifications.html">Qualifications</a>
             <a href="service.html">Service</a>
+            <!--Add toggle feature that changes the appearance of the page (dark mode, font size, color scheme)-->
         </div>
         <h1>Sabrina's Secret Page</h1>
         <img src="images/personal.jpg" alt="Picture of me" width="250px" class="center">
