--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <!DOCTYPE html>
 <HTML>
     <head>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="styles.css">
         <title>
             Sabrina Ahmed's Website
@@ -18,16 +21,38 @@
     </head>
     <body>
         <div id="myTopnav" class="topNav">
-            <img src="images/logo.png" alt="logo" width="75px">
+            <img src="images/logo.png" alt="logo" width="75px" style="padding-left: 10px;">
             <a class="active" href="index.html">Home</a>
             <a href="portfolio.html">Portfolio</a>
             <a href="qualifications.html">Qualifications</a>
             <a href="service.html">Service</a>
             <!--Add toggle feature that changes the appearance of the page (dark mode, font size, color scheme)-->
+            <!--<label class="toggle">
+                <input type="checkbox">
+                <span class="slider round"></span>
+            </label>-->
         </div>
         <div id="main">
             <hr>
             <br>
-            <h1>Sabrina Ahmed</h1></div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <img src="images/Museum.jpg" alt="Picture of me" width="250px" class="center">
+                    </div>
+                    <div class="col-6">
+                        <br><br><br><br><br>
+                        <div class="row title">
+                            <h1 style="text-align:center">Sabrina Ahmed</h1>
+                        </div>
+                        <div class="row subheading">
+                            <h2 style="text-align:center">Computing '23 at Texas A&M University</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            
+        </div>
     </body>
 </HTML>
