--- a/qualifications.html
+++ b/qualifications.html
@@ -8,6 +8,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="styles.css">
         <title>
             Sabrina Ahmed's Qualifications
@@ -16,14 +19,16 @@
     </head>
     <body>
         <div id="myTopNav" class="topNav">
-            <img src="images/logo.png" alt="logo" width="75px">
+            <img src="images/logo.png" alt="logo" width="75px" style="padding-left: 10px;">
             <a href="index.html">Home</a>
             <a href="portfolio.html">Portfolio</a>
             <a class="active" href="qualifications.html">Qualifications</a>
             <a href="service.html">Service</a>
             <!--Add toggle feature that changes the appearance of the page (dark mode, font size, color scheme)-->
         </div>
-        <h1>Sabrina's Qualifications</h1>
-        <iframe src="AhmedSabrinaResumeUpdated.pdf" class="center">Resume</a>
+        <hr>
+        <br>
+        <h1>Qualifications</h1>
+        <iframe src="AhmedSabrinaResumeNew.pdf" class="center">Resume</a>
     </body>
 </html>
