--- a/secret.html
+++ b/secret.html
@@ -3,6 +3,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+    
         <link rel="stylesheet" href="styles.css">
         <title>
             Sabrina Ahmed's About Me
@@ -18,6 +22,8 @@
             <a href="service.html">Service</a>
             <!--Add toggle feature that changes the appearance of the page (dark mode, font size, color scheme)-->
         </div>
+        <hr>
+        <br>
         <h1>Sabrina's Secret Page</h1>
         <img src="images/personal.jpg" alt="Picture of me" width="250px" class="center">
     </body>
