--- a/service.html
+++ b/service.html
@@ -30,6 +30,25 @@
         <hr>
         <br>
         <h1>Service</h1>
-        <img src="images/serviceimg.JPG" alt="Donuts for Refugees" width="250px" class="center">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <img src="images/serviceimg.JPG" alt="Donuts for Refugees" width="250px" class="center">
+                </div>
+                <div class="col-6 subheading" >
+                    Information about donuts
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 subheading">
+                    Information about Girls Who Code
+                </div>
+                <div class="col-6">
+                    <img src="images/GirlsWhoCode.jpeg" alt="Girls Who Code" width="250px" class="center">
+                </div>
+            </div>
+        </div>
+        
+        
     </body>
 </html>
